--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank">哈尔滨医院儿科爆满 走廊座椅贴编号当病床</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741434.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-4-150x120.gif" align ="left"></a>最近，因寒冷所致的儿童哮喘再次席卷而来，哈尔滨各家医院儿科诊室爆满。因床位紧张，医院只好将走廊里的座椅贴上编号，当作打吊瓶的临时床位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank">圣诞卡求救信 曾被迫害英记者透露更多细节</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-71081666-150x120.jpg" align ="left"></a>上周末，一张圣诞卡求救信揭发中国上海青浦监狱强制囚犯工作的内幕，引起全球关注。周一，曾在大陆经历类似遭遇的当事人透露更多细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank">挑战叶德娴版桃姐角色 惠英红老态演技引负评</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/180111044705100615-150x120.jpg" align ="left"></a>演技精湛的香港艺人惠英红，最近在大陆综艺节目《我就是演员》中挑战叶德娴饰演的“桃姐”一角。虽然表演细腻，却被网民评论“不理想”、“总是差那么一点点”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank">马思纯零台词诠释抑郁症 网友赞：眼神都是戏</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-sichun-150x120.jpg" align ="left"></a>与周冬雨一起夺得金马双影后的大陆女星马思纯，近日在一短片中零台词诠释忧郁症。在一分多钟的时间里，她展现了一个人从绝望到释然的全过程。网友纷纷夸赞：“眼神里都是戏！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189412679-600x400-1-150x120.jpg" align ="left"></a>这次习近平访问澳门，澳门当局神经紧绷，祭出了史无前例的安保，唯恐担心发生意外。不过安全上倒没什么意外，但是其它地方出现了不少意外。总的来说，有一大看点和三大真相，让北京的心“拔凉拔凉”的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank">【新闻看点】2019难捱 马云：日接5友借钱电话</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1409180658462039-150x120.jpg" align ="left"></a>马云日前说，最近，一天接到5个借钱电话，一周10个朋友卖楼；透露中国企业的艰难处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741298.md#1" target="_blank">中国8000多冰川消失 恐陷长期水资源危机</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512050246441758-150x120.jpg" align ="left"></a>中国境内的冰川总面积逐渐缩小，有研究机构表示，中国几十年间已约有8,310条冰川完全消失。研究人员认为，若冰川持续消融，将造成西北干旱地区陷入长期水资源危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740844.md#1" target="_blank">警察绝密文件流出 视频反映港警恐慌怕落单</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912160321521501-150x120.jpg" align ="left"></a>近日香港警方的一份内部绝密文件被曝光，前线警员学样提出7大诉求，被认为是警方恐惧要远离危险，民间质疑警方若按诉求执行，那警队到底受什么约束？等于失控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741135.md#1" target="_blank">苏宁小店持续亏损 北京关闭百家</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1084px-201704_Suning_HQ-150x120.jpg" align ="left"></a>在大陆各地拥有6000家店面的的苏宁小店出现关店潮，北京关店百家、武汉多家清仓，关店潮正在蔓延。苏宁小店持续亏损，其惨淡的经营状况正是现今大陆零售业的缩影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank">澳门实施“安全法” 恐落入中共监控系统</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188813067-1-150x120.jpg" align ="left"></a>澳门主权移交20年，《网络安全法》开始实施。外界关注，鉴于国内省份早已成立“网络斗争指挥中心”，澳门不断向中国大陆看齐、一致，完全内地化，一国两制已不复存在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741146.md#1" target="_blank">向NASA提供中国产品 亚裔雇员或坐牢10年</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741146.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N80ZT-150x120.jpg" align ="left"></a>美国司法部12月19日在其网站上公布，联邦陪审团裁定尹晟成（Seongchan "Steven" Yun，音译）犯有向联邦机构提供虚假文件罪，或面临最高10年的联邦监禁处罚。尹晟成是NASA承包商CBOL公司的雇员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740992.md#1" target="_blank">北大教授郑也夫吁七常委带头公示财产</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740992.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG11413885773-150x120.jpg" align ="left"></a>继去年底公开呼吁中共“淡出历史舞台”后，北大教授郑也夫再度刊文，呼吁中共政治局七常委带头公示财产，推行财产公示制度，因为这是最好的反腐方法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741027.md#1" target="_blank">安倍和习近平会面 促保持香港自由开放</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1NA0FB-150x120.jpg" align ="left"></a>周一（12月23日），日本首相安倍晋三和中国国家主席习近平会面时说，香港应该“继续保持自由开放”。半年多来，香港反送中抗议震惊全球。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741024.md#1" target="_blank">中国能成最大经济体？专家：难超美国</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1601210648132357-600x400-150x120.jpg" align ="left"></a>部分媒体近日报导，全球第二大经济体中国即将挤下美国，成为第一大经济体。彭博专栏作家分析，这样的报导恐误导阅众，美国财富实则远超过中国，稳居全球领先地位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740279.md#1" target="_blank">冤狱4年再遭迫害 长沙法轮功学员罗丹离世</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-16-150x120.jpg" align ="left"></a>长沙市浏阳市50岁的法轮功学员罗丹在经历了4年的冤狱折磨、捞刀河洗脑班的摧残，以及不断遭受中共不人员的骚扰迫害后，于12月1日含冤离世，留下80岁的老父亲孤身一人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740703.md#1" target="_blank">从1月1日起 北京降数百进口商品关税</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1908301421442436-150x120.jpg" align ="left"></a>中共当局宣布，中国明年将降低数百个从冷冻猪肉到高科技零件等产品的进口关税。
@@ -19,20 +32,6 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739571.md#1" target="_blank">黄晓明夫妇无戏可拍 经济放缓令影视业入冬</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739571.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/VCG111219316488-150x120.jpeg" align ="left"></a>大陆影视演员黄晓明的妻子Angelababy近日被曝光今年只拍了一部作品，而黄晓明也是很久没有拍戏了。有分析认为，大陆经济增长持续放缓已经影响到影视行业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank">云南恶霸孙小果案重审 再判死刑</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>2019年12月23日，云南恶霸孙小果，因1997年犯强奸罪等罪的再审案件公开宣判，孙小果再被判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739250.md#1" target="_blank">大陆现新三角债 中共地方当局欠民企巨资</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201131228012320-150x120.jpg" align ="left"></a>临近2019年年末，中共各地方当局拖欠企业欠款再次引发外界关注，因欠款，有的企业已经发不出工资来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank">世界边缘的宁静岛屿 为何成美中角力新战场</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738051.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_15X835-150x120.jpg" align ="left"></a>在世界边缘的挪威海和北大西洋之间，有一群遗世独立般的岛屿。但最近，这个偏远的群岛受到世界媒体关注，成为美中角力的新战场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank">【拍案惊奇】《愿荣光归香港》全新台语歌词</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2dc2847003ef2_ttl7daypA5_20191222-____-____-150x120.jpg" align ="left"></a>《新闻拍案惊奇》获授权独家首发：《愿荣光归香港》全新台语歌词、CSM重唱团“六重唱”台语演唱，台湾知名“音乐制作人J”台北录制！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739135.md#1" target="_blank">高圆圆冬至晒照问吃啥 贾静雯晒满桌美食回应</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/gaoyuanyuan-jiajingwen-150x120.jpg" align ="left"></a>与台湾艺人赵又廷结婚五年的大陆女星高圆圆，今年5月底生下女儿。产后久未露面的她，12月22日在微博晒出站在糖葫芦前双手插兜的照片，并问道：“冬至，你们吃什么？”结果引来其好友贾静雯晒出满桌美食，给予“南北通吃”的全面回答。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738990.md#1" target="_blank">指如今演艺工作式微 周润发有意退休后转行</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738990.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/2582b1b19bf9d2f79233c4d7c6b586d8-150x120.jpg" align ="left"></a>12月22日，艺人周润发（发哥）现身香港养和医院，陪在医院检查身体的90多岁母亲过冬至。被问及工作计划，常带着明星艺人行山的发哥笑说：“我想转行，可以做运动员，可以考教练牌照教大家行山。演艺界开始式微啦！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739179.md#1" target="_blank">动荡中过冬 港警中环实枪指市民</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/WhatsApp-Image-2019-12-23-at-5.10.01-AM_cut-150x120.jpeg" align ="left"></a>12月22日是中华传统二十四节气中的“冬至”，尽管过去半年香港抗争运动如火如荼，不过这一天港人也放下纷争，希望和家人团圆度节。但大批港警却在下午中环一个人权集会上冲入会场，当中有警员擎枪指向在场人士，并发射催泪弹驱散，场面混乱。附近的IFC商场也提早拉闸，令市民无法和家人轻松度节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733119.md#1" target="_blank">新闻传媒界法轮功学员遭中共迫害综述（下）</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733119.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-14-150x120.jpg" align ="left"></a>中共自1999年迫害法轮功以来，把新闻媒体作为散布谎言的工具迷惑百姓、维持打压，并对在中国新闻传媒系统就职的法轮功学员进行残酷的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739288.md#1" target="_blank">留美女生：回中国工作遭红三代持枪强奸</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2d9060b681c71_ttl7dayhAp_W6-150x120.jpg" align ="left"></a>在强忍了一年多的时间后，28岁的大陆留学生W小姐在美国向媒体披露：她在大陆工作期间，曾遭公司董事长赵磊拿枪威胁、强奸以致怀孕、堕胎的经历。而强奸她的赵磊自称拥有超强红色背景，是被称为中共“延安五老”之一的谢觉哉和其第二任妻子王定国的外孙、即王定国长女谢宏的儿子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739193.md#1" target="_blank">陆最大农商行成最惨新股  两月蒸发380亿</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1011131302022320-150x120.jpg" align ="left"></a>大陆最大的农商行——重庆农商行上市两个月市值蒸发近400亿元，连续经历破净、破发，被称为“2019年最惨新股”。今年七只银行股新股均表现不佳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank">学者：中共通过严密的监控扼杀了公民社会</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-55815023-150x120.jpg" align ="left"></a>那些倡导跟中共“接触”的人认为，“接触”可以促进中国民主化进程。但是即便这种假说成立，民主运动也需要公民社会的存在。但不幸的是，中共通过严密的监控系统扼杀了公民社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739021.md#1" target="_blank">北京二手房价连跌6个月 现300万降幅</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/501e769e61b39022614b347fe64f3270-150x120.jpg" align ="left"></a>北京二手住宅价格连续6个月下跌，被称为北京二手房市场的最长下滑周期，有的二手住宅直接砍掉300万元成交，名校学区房也开始出现百万降幅。
-
-大陆媒体12月22日报导，12月1日至19日的统计数据显示，北京二手住宅价格在每平方米5.4万元（人民币，下同）左右，与今年最高点相比下降了4150元。
-
-这是今年北京二手住宅价格连续第6个月下跌，是北京二手房市场.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739502.md#1" target="_blank">【翻墙必看】90后女孩遭中共红三代老板强奸</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.传中共红三代涉持枪强奸下属 警方不调查
@@ -42,8 +41,5 @@
 《大纪元时报》日前独家披露了神秘红三代操盘中共权贵海外资产的内幕。该报导揭示了中共权贵家族已渗.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740491.md#1" target="_blank">抗争者被骂曱甴 警官称大众过度解读 引反弹</a><br></h3>警方骂抗争者为“曱甴”，而警民关系主任近日解释不要过度解读，“曱甴”从正面看是很有生命力的说法，引起舆论哗然，遭强烈反弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11740164.md#1" target="_blank">哈尔滨一污水管网施工坍塌 4人被埋</a><br></h3>12月23日上午10时15分，黑龙江省哈尔滨市阿城区新利街污水管网工程施工现场塌方，现场作业5人，塌方时4人被埋，1人被救出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739399.md#1" target="_blank">天津发生3.3级地震 北京唐山有震感</a><br></h3>12月23日凌晨2时44分，天津蓟州区发生3.3级地震。天津、北京、唐山等地震感明显。此次地震是天津7年来最大地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11739024.md#1" target="_blank">传中共红三代涉持枪强奸下属 警方不调查</a><br></h3>父亲是河南一家大型央企的负责人，中学后赴美留学，归国后经引荐进入一家名为“美好世界航空集团”的公司，未想却遭遇一场恶梦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
