--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,19 +9,19 @@
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11741034.md#1">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br>
 <br><p><a href="https://github.com/osnkrv285/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748707.md#1">王友群：中共的解体可能快速发生？</a><br>
+<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11737584.md#1">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748173.md#1">高天韵：南亚海啸15年 2020灾害预言会否成真</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748518.md#1">洪微：2020中国人最期待的预言</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748249.md#1">任世豪：中共颠倒是非善恶</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748135.md#1">廖祖笙：党天下法治和德治皆为无本之木</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748133.md#1">陈思敏：向日本国会议员行贿的中企有何背景</a><br>
+<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747307.md#1">周晓辉： 川习再次会面与英国预言家的预言</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11745899.md#1">美国故事：阶前万里 古罗马文明在北美</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747262.md#1">任重：中共外汇告急 民间资本加速外逃</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747187.md#1">常忍：中共让杀人犯成为“标兵”“英模”</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746948.md#1">袁斌：禁过圣诞 说明毛时代正在逆袭！</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11745896.md#1">夏小强：孙小果再获死刑 背后靠山是谁？</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746793.md#1">陆言：从法轮功案看中共践踏基本法律原则</a><br>
-<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746747.md#1">王行： “世界律师大会”让中共臭名远扬</a><br>
 <br><p><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -31,6 +31,7 @@
 <br><p><a href="https://github.com/osnkrv285/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748096.md#1">【翻墙必看】华为产品价格便宜的内幕</a><br>
+<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748707.md#1">王友群：中共的解体可能快速发生？</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748358.md#1">7?21遭暴力袭击 港青年患脑震荡症候群</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748267.md#1">【珍言真语】梁家杰：林郑可做的最后一搏</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播预告】新唐人电视台2020跨年缤纷夜</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11744047.md#1">“你的密码归党管” 中共密码法明年上路</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747582.md#1">分析：美中贸易战 明年进入三个关键期</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11743511.md#1">纽约法轮功学员向李洪志师父恭贺新年（上）</a><br>
-<a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11747307.md#1">周晓辉： 川习再次会面与英国预言家的预言</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11749026.md#1">老挝坠入中共债务陷阱 负债超过GDP一半</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746872.md#1">控告江泽民的壁挂厂厂长田世洪遭迫害离世</a><br>
 <a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/27/n11748552.md#1">湖北应城4.9级地震 600多户民居现裂缝</a><br>
